# newsetup

./: README.md  detection readme  priority_model.pkl
admin-dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.js
admin-dashboard/app/: globals.css  layout.tsx  page.tsx
admin-dashboard/app/test/: page.tsx
admin-dashboard/components/: BackendTest.tsx  Dashboard.tsx  SeedButton.tsx
admin-dashboard/components/maps/: IndiaMap.tsx
admin-dashboard/components/modals/: NewCrowdfundingModal.tsx
admin-dashboard/components/tabs/: ChatbotTab.tsx  NewCrowdfundingTab.tsx  OverviewTab.tsx  (+2 more)
admin-dashboard/lib/: convex-provider.tsx  utils.ts
convex-backend/: package.json
convex-backend/convex/: schema.ts
fastapi-ml-services/: README.md  pyproject.toml
fastapi-ml-services/app/: main.py
hazard-backend/app/: main.py  utils.py
react-native-app/: .gitignore  metro.config.js  package-lock.json  package.json  tsconfig.json
react-native-app/app/: _layout.tsx  index.tsx
react-native-app/config/: weather.ts
react-native-app/constants/: theme.ts
react-native-app/contexts/: AuthContext.tsx
react-native-app/convex/: crowdfunding.ts  family.ts  hazards.ts  safehouses.ts  schema.ts  seedData.ts  sos.ts  users.ts
react-native-app/hooks/: useAuth.ts  useFamily.ts  useHazards.ts  useLocation.ts  useOfflineStorage.ts  useSOS.ts  useSafeHouses.ts  useWeatherConditions.ts
react-native-app/providers/: ConvexProvider.tsx
react-native-app/services/: weatherApi.ts
react-native-app/types/: user.ts
react-native-app/utils/: digipin.ts
(+17 files in other folders)
