[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flood-disaster-ml-services"
version = "1.0.0"
description = "FastAPI ML services for flood & disaster management platform"
authors = [
    {name = "Disaster Management Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "tensorflow==2.13.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "opencv-python==4.8.1.78",
    "pillow==10.0.1",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.25.1",
    "websockets==11.0.3",
    "redis==5.0.1",
    "celery==5.3.4",
    "pymongo==4.6.0",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "plotly==5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.9.1",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.6.1",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true